models and training files have been added

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,17 @@ dmypy.json
 *.bin
 *.pib
 *.txt
+*.csv
+
+# input data and models
+input/
+models/
+
+
+# data files
+*.csv
+*.h5
+*.pkl
+*.pth
+*.txt
+*.bin
